feat add header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>boolando</title>
 </head>
 <body>
-    
+    <header>
+        <div class="header-banner">
+            <div class="container">
+                <div class="genders" > Uomo donna Bambino</div>
+             <div class="logo" ><img class="logo" src="./img/boolean-logo.png" alt="logo">
+            </div>
+             <div class="icon-header"><i class="fa-regular fa-user"></i> <i class="fa-regular fa-heart"></i> <i class="fa-solid fa-bag-shopping"></i>
+            </div>
+
+            </div>
+        </div>
+    </header>
 </body>
 </html>
