feat add fist photo

--- a/index.html
+++ b/index.html
@@ -16,9 +16,16 @@
             </div>
              <div class="icon-header"><i class="fa-regular fa-user"></i> <i class="fa-regular fa-heart"></i> <i class="fa-solid fa-bag-shopping"></i>
             </div>
-
-            </div>
         </div>
     </header>
+    <main class="container">
+        <div class="square-row">
+            <div class="col-square">
+                <img class="img-fluid" src="./img/1.webp" alt="man with t-shirt">
+                <div class="discount">-50%</div>
+                <div class="ecology">-sostenibilità</div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
